--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- inspired by JavaScript 30 day challenge -->
   </head>
   <body>
+    <header>
+      <p>Vanilla JavaScript Clock</p>
+    </header>
     <section class="clock">
       <div class="clock-face">
         <div class="hand hour-hand">
@@ -16,6 +19,9 @@
 
         </div>
         <div class="hand second-hand">
+
+        </div>
+        <div class="dot">
 
         </div>
       </div>
